fix address display bugs

--- a/app/views/component/detail/_address.html.haml
+++ b/app/views/component/detail/_address.html.haml
@@ -10,7 +10,7 @@
     #{location.address.city},
 
   %span.state{ itemprop: 'addressRegion' }
-    = location.address.state_province
+    = location.address.state
 
   %span.zipcode{ itemprop: 'postalCode' }
     = location.address.postal_code
