--- a/app/views/component/detail/_mail_address.html.haml
+++ b/app/views/component/detail/_mail_address.html.haml
@@ -14,7 +14,7 @@
   ,
 
   %span.state{ itemprop: 'addressRegion' }
-    = location.mail_address.state_province
+    = location.mail_address.state
 
   %span.zipcode{ itemprop: 'postalCode' }
     = location.mail_address.postal_code
