fix how-to-apply display bug

--- a/app/views/component/detail/_service_application_process.html.haml
+++ b/app/views/component/detail/_service_application_process.html.haml
@@ -1,4 +1,4 @@
 %section.how-to-apply
   %h1= t('service_fields.application_process')
   %span
-    = service.application_process
+    = service.how_to_apply
